--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/gregeld96/final_project_phase1#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
